--- a/Tools/Tools.vcxproj.filters
+++ b/Tools/Tools.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="ColorCout.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Randomizer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DynamicArray.h">
@@ -42,6 +45,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="ColorCout.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Randomizer.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
